@@ -21,10 +21,6 @@ import org.bukkit.inventory.ItemStack;
 import java.io.File;
 import java.util.*;
 
-/**
- * QuestEditorMenu (Complete)
- * - Added support for 'requiredQuests' in CHAIN tab.
- */
 public final class QuestEditorMenu implements Listener {
 
     private static final int SIZE = 54;
@@ -39,7 +35,6 @@ public final class QuestEditorMenu implements Listener {
     private final QuestEnginePlugin plugin;
     private final Map<UUID, Session> sessions = new HashMap<>();
 
-    // Tab Enum은 EditorTab.java를 참조하지만 편의상 내부 로직에서 사용
     public enum ActionGroup {
         ACCEPT("accept"), START("start"), SUCCESS("success"), FAIL("fail"),
         CANCEL("cancel"), STOP("stop"), RESTART("restart"), REPEAT("repeat");
@@ -71,7 +66,9 @@ public final class QuestEditorMenu implements Listener {
         Bukkit.getPluginManager().registerEvents(this, plugin);
     }
 
-    // --- Open Methods ---
+    private String m(Player p, String path) { return plugin.msg().get(p, path); }
+    private List<String> mL(Player p, String path) { return plugin.msg().list(p, path); }
+
     public void openNew(Player player) { openNewWithId(player, "new_quest"); }
 
     public void openNewWithId(Player player, String id) {
@@ -93,13 +90,8 @@ public final class QuestEditorMenu implements Listener {
         openMainDelayed(player, session);
     }
 
-    // --- Helpers ---
-    private String m(String path) { return plugin.msg().get(path); }
-    private String m(String path, String def) { return plugin.msg().get(path, def); }
-
-    // --- Delayed Openers ---
     private void openMainDelayed(Player p, Session s) {
-        Bukkit.getScheduler().runTaskLater(plugin, () -> { if (p.isOnline()) p.openInventory(createMainInventory(s)); }, 1L);
+        Bukkit.getScheduler().runTaskLater(plugin, () -> { if (p.isOnline()) p.openInventory(createMainInventory(p, s)); }, 1L);
     }
     private void openListDelayed(Player p, String k) {
         Bukkit.getScheduler().runTaskLater(plugin, () -> {
@@ -108,38 +100,37 @@ public final class QuestEditorMenu implements Listener {
     }
     private void openEventSelectDelayed(Player p) {
         Bukkit.getScheduler().runTaskLater(plugin, () -> {
-            if (p.isOnline()) { Session s = sessions.get(p.getUniqueId()); if (s != null) p.openInventory(createEventInventory(s)); }
+            if (p.isOnline()) { Session s = sessions.get(p.getUniqueId()); if (s != null) p.openInventory(createEventInventory(p, s)); }
         }, 1L);
     }
     private void openCapturesDelayed(Player p) {
         Bukkit.getScheduler().runTaskLater(plugin, () -> {
-            if (p.isOnline()) { Session s = sessions.get(p.getUniqueId()); if (s != null) p.openInventory(createCapturesInventory(s)); }
+            if (p.isOnline()) { Session s = sessions.get(p.getUniqueId()); if (s != null) p.openInventory(createCapturesInventory(p, s)); }
         }, 1L);
     }
 
-    // --- Inventory Creators ---
-    private Inventory createMainInventory(Session session) {
-        String tabName = m("gui.editor.tab." + session.tab.name().toLowerCase());
-        String title = m("gui.editor.title.main").replace("%tab%", tabName);
+    private Inventory createMainInventory(Player p, Session session) {
+        String tabName = m(p, "gui.editor.tab." + session.tab.name().toLowerCase());
+        String title = m(p, "gui.editor.title.main").replace("%tab%", tabName);
         GuiHolder holder = new GuiHolder(HOLDER_MAIN);
         Inventory inv = Bukkit.createInventory(holder, SIZE, title);
         holder.setInventory(inv);
         plugin.gui().fill(inv, new ItemStack(Material.GRAY_STAINED_GLASS_PANE));
 
-        renderTabs(inv, session.tab);
-        renderFields(inv, session.draft, session.tab);
-        renderControls(inv);
+        renderTabs(p, inv, session.tab);
+        renderFields(p, inv, session.draft, session.tab);
+        renderControls(p, inv);
         return inv;
     }
 
-    private Inventory createListInventory(Player player, String key) {
-        Session session = sessions.get(player.getUniqueId());
+    private Inventory createListInventory(Player p, String key) {
+        Session session = sessions.get(p.getUniqueId());
         if (session == null) return null;
         ensureActionGroups(session.draft);
         List<String> list = getListReference(session.draft, key);
         if (list == null) return null;
 
-        String title = m("gui.editor.title.list").replace("%key%", key);
+        String title = m(p, "gui.editor.title.list").replace("%key%", key);
         GuiHolder holder = new GuiHolder(HOLDER_LIST + ":" + key);
         Inventory inv = Bukkit.createInventory(holder, SIZE, title);
         holder.setInventory(inv);
@@ -150,25 +141,25 @@ public final class QuestEditorMenu implements Listener {
         for (String val : list) {
             if (idx >= max) break;
             inv.setItem(CONTENT_START + idx++, new ItemBuilder(Material.PAPER)
-                    .setName(val == null || val.isEmpty() ? m("gui.editor.common.empty") : val)
-                    .setLore(Arrays.asList(ChatColor.GRAY + "Idx " + (idx-1), "", m("gui.editor.common.text.left"), m("gui.editor.common.text.right")))
+                    .setName(val == null || val.isEmpty() ? m(p, "gui.editor.common.empty") : plugin.msg().color(val))
+                    .setLore(Arrays.asList(ChatColor.GRAY + "Idx " + (idx-1), "", m(p, "gui.editor.common.text.left"), m(p, "gui.editor.common.text.right")))
                     .hideAllFlags().build());
         }
         if (CONTENT_START + idx <= CONTENT_END) {
             inv.setItem(CONTENT_START + idx, new ItemBuilder(Material.LIME_STAINED_GLASS_PANE)
-                    .setName(m("gui.editor.list.add.name")).setLore(List.of(m("gui.editor.list.add.lore1"))).hideAllFlags().build());
+                    .setName(m(p, "gui.editor.list.add.name")).setLore(List.of(m(p, "gui.editor.list.add.lore1"))).hideAllFlags().build());
         }
-        inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m("gui.editor.captures.back.name")).build());
+        inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m(p, "gui.editor.captures.back.name")).build());
         return inv;
     }
 
-    private Inventory createEventInventory(Session session) {
+    private Inventory createEventInventory(Player p, Session session) {
         int pageSize = CONTENT_END - CONTENT_START + 1;
         int total = BUILTIN_EVENTS.size();
         int maxPage = Math.max(1, (total + pageSize - 1) / pageSize);
         session.eventPage = Math.max(0, Math.min(session.eventPage, maxPage - 1));
 
-        String title = m("gui.editor.title.event_view", "&9Event Select %page%/%max%")
+        String title = m(p, "gui.editor.title.event_view")
                 .replace("%page%", String.valueOf(session.eventPage + 1))
                 .replace("%max%", String.valueOf(maxPage));
 
@@ -181,25 +172,25 @@ public final class QuestEditorMenu implements Listener {
         int idx = 0;
         for (int i = start; i < total && idx < pageSize; i++, idx++) {
             inv.setItem(CONTENT_START + idx, new ItemBuilder(Material.PAPER)
-                    .setName(m("gui.editor.event.entry.name").replace("%event%", BUILTIN_EVENTS.get(i)))
-                    .setLore(Arrays.asList(m("gui.editor.event.entry.lore1"), m("gui.editor.event.entry.lore2")))
+                    .setName(m(p, "gui.editor.event.entry.name").replace("%event%", BUILTIN_EVENTS.get(i)))
+                    .setLore(Arrays.asList(m(p, "gui.editor.event.entry.lore1"), m(p, "gui.editor.event.entry.lore2")))
                     .hideAllFlags().build());
         }
 
         inv.setItem(48, new ItemBuilder(Material.WRITABLE_BOOK)
-                .setName(m("gui.editor.event.help.title"))
-                .setLore(Arrays.asList(m("gui.editor.event.help.help1"), m("gui.editor.event.help.help2"), m("gui.editor.event.help.help3")))
+                .setName(m(p, "gui.editor.event.help.title"))
+                .setLore(mL(p, "gui.editor.event.help.lore"))
                 .hideAllFlags().build());
 
-        if (session.eventPage > 0) inv.setItem(45, new ItemBuilder(Material.ARROW).setName(m("gui.editor.event.prev.name")).build());
-        inv.setItem(49, new ItemBuilder(Material.BARRIER).setName(m("gui.editor.event.back.name")).build());
-        if (session.eventPage < maxPage - 1) inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m("gui.editor.event.next.name")).build());
+        if (session.eventPage > 0) inv.setItem(45, new ItemBuilder(Material.ARROW).setName(m(p, "gui.editor.event.prev.name")).build());
+        inv.setItem(49, new ItemBuilder(Material.BARRIER).setName(m(p, "gui.editor.event.back.name")).build());
+        if (session.eventPage < maxPage - 1) inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m(p, "gui.editor.event.next.name")).build());
 
         return inv;
     }
 
-    private Inventory createCapturesInventory(Session session) {
-        String title = m("gui.editor.title.captures_view", "&9Captures Editor");
+    private Inventory createCapturesInventory(Player p, Session session) {
+        String title = m(p, "gui.editor.title.captures_view");
         GuiHolder holder = new GuiHolder(HOLDER_CAPTURES);
         Inventory inv = Bukkit.createInventory(holder, SIZE, title);
         holder.setInventory(inv);
@@ -211,116 +202,112 @@ public final class QuestEditorMenu implements Listener {
         for (var e : entries) {
             if (idx >= max) break;
             inv.setItem(CONTENT_START + idx++, new ItemBuilder(Material.PAPER)
-                    .setName(m("gui.editor.captures.entry.name").replace("%key%", e.getKey()))
-                    .setLore(Arrays.asList(m("gui.editor.captures.entry.chain").replace("%chain%", e.getValue()), "", m("gui.editor.captures.entry.left"), m("gui.editor.captures.entry.right")))
+                    .setName(m(p, "gui.editor.captures.entry.name").replace("%key%", e.getKey()))
+                    .setLore(Arrays.asList(m(p, "gui.editor.captures.entry.chain").replace("%chain%", e.getValue()), "", m(p, "gui.editor.captures.entry.left"), m(p, "gui.editor.captures.entry.right")))
                     .hideAllFlags().build());
         }
         if (CONTENT_START + idx <= CONTENT_END) {
             inv.setItem(CONTENT_START + idx, new ItemBuilder(Material.LIME_STAINED_GLASS_PANE)
-                    .setName(m("gui.editor.captures.add.name")).setLore(Arrays.asList(m("gui.editor.captures.add.lore1"), m("gui.editor.captures.add.lore2"))).hideAllFlags().build());
+                    .setName(m(p, "gui.editor.captures.add.name")).setLore(mL(p, "gui.editor.captures.add.lore")).hideAllFlags().build());
         }
-        inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m("gui.editor.captures.back.name")).build());
+        inv.setItem(53, new ItemBuilder(Material.ARROW).setName(m(p, "gui.editor.captures.back.name")).build());
         return inv;
     }
 
-    // --- Renderers ---
-    private void renderTabs(Inventory inv, EditorTab current) {
+    private void renderTabs(Player p, Inventory inv, EditorTab current) {
         EditorTab[] vals = EditorTab.values();
         for (int i = 0; i < vals.length; i++) {
             boolean sel = vals[i] == current;
             inv.setItem(i, new ItemBuilder(sel ? Material.BLUE_STAINED_GLASS_PANE : Material.LIGHT_GRAY_STAINED_GLASS_PANE)
-                    .setName((sel ? m("gui.editor.tab.selected") : m("gui.editor.tab.normal")).replace("%name%", m("gui.editor.tab." + vals[i].name().toLowerCase())))
-                    .setLore(List.of(sel ? m("gui.editor.tab.lore.current") : m("gui.editor.tab.lore.switch")))
+                    .setName((sel ? m(p, "gui.editor.tab.selected") : m(p, "gui.editor.tab.normal")).replace("%name%", m(p, "gui.editor.tab." + vals[i].name().toLowerCase())))
+                    .setLore(List.of(sel ? m(p, "gui.editor.tab.lore.current") : m(p, "gui.editor.tab.lore.switch")))
                     .hideAllFlags().build());
         }
     }
 
-    private void renderFields(Inventory inv, QuestEditorDraft d, EditorTab tab) {
+    private void renderFields(Player p, Inventory inv, QuestEditorDraft d, EditorTab tab) {
         ensureActionGroups(d);
         switch (tab) {
             case DISPLAY -> {
-                inv.setItem(10, textItem("gui.editor.display.title.label", d.displayTitle));
-                inv.setItem(12, listItem("gui.editor.display.description.label", d.displayDescription));
-                inv.setItem(14, iconItem(d));
-                inv.setItem(16, textItem("gui.editor.display.progress.label", d.displayProgress));
-                inv.setItem(19, numberItem("gui.editor.display.cmd.label", d.displayCustomModelData));
-                inv.setItem(21, textItem("gui.editor.display.hint.label", d.displayHint));
-                inv.setItem(23, textItem("gui.editor.display.reward.label", d.displayReward));
-                inv.setItem(25, textItem("gui.editor.display.category.label", d.displayCategory));
-                inv.setItem(28, textItem("gui.editor.display.difficulty.label", d.displayDifficulty));
-                inv.setItem(40, new ItemBuilder(Material.ITEM_FRAME).setName(m("gui.editor.display.icon.help.title")).setLore(Arrays.asList(m("gui.editor.display.icon.help.help1"), m("gui.editor.display.icon.help.help2"), m("gui.editor.display.icon.help.help3"), m("gui.editor.display.icon.help.help4"))).hideAllFlags().build());
+                inv.setItem(10, textItem(p, "gui.editor.display.title.label", d.displayTitle));
+                inv.setItem(12, listItem(p, "gui.editor.display.description.label", d.displayDescription));
+                inv.setItem(14, iconItem(p, d));
+                inv.setItem(16, textItem(p, "gui.editor.display.progress.label", d.displayProgress));
+                inv.setItem(19, numberItem(p, "gui.editor.display.cmd.label", d.displayCustomModelData));
+                inv.setItem(21, textItem(p, "gui.editor.display.hint.label", d.displayHint)); // 힌트 명령어 (Hint Command)
+                inv.setItem(23, textItem(p, "gui.editor.display.reward.label", d.displayReward));
+                inv.setItem(25, textItem(p, "gui.editor.display.category.label", d.displayCategory));
+                inv.setItem(28, textItem(p, "gui.editor.display.difficulty.label", d.displayDifficulty));
+                inv.setItem(40, new ItemBuilder(Material.ITEM_FRAME).setName(m(p, "gui.editor.display.icon.help.title")).setLore(mL(p, "gui.editor.display.icon.help.lore")).hideAllFlags().build());
             }
             case EVENT -> {
-                inv.setItem(10, textItem("gui.editor.event.event.label", d.event));
-                inv.setItem(12, textItem("gui.editor.event.startmode.label", d.startMode.name()));
-                inv.setItem(14, textItem("gui.editor.event.type.label", d.type));
-                inv.setItem(48, new ItemBuilder(Material.WRITABLE_BOOK).setName(m("gui.editor.event.help.title")).setLore(Arrays.asList(m("gui.editor.event.help.help1"), m("gui.editor.event.help.help2"), m("gui.editor.event.help.help3"))).hideAllFlags().build());
+                inv.setItem(10, textItem(p, "gui.editor.event.event.label", d.event));
+                inv.setItem(12, textItem(p, "gui.editor.event.startmode.label", d.startMode.name()));
+                inv.setItem(14, textItem(p, "gui.editor.event.type.label", d.type));
+                inv.setItem(48, new ItemBuilder(Material.WRITABLE_BOOK).setName(m(p, "gui.editor.event.help.title")).setLore(mL(p, "gui.editor.event.help.lore")).hideAllFlags().build());
             }
             case CUSTOM_EVENT -> {
-                inv.setItem(10, textItem("gui.editor.custom.eventclass.label", d.customEventClass));
-                inv.setItem(12, textItem("gui.editor.custom.playergetter.label", d.customPlayerGetter));
-                inv.setItem(14, new ItemBuilder(Material.BOOK).setName(m("gui.editor.custom.captures.label")).setLore(Arrays.asList(m("gui.editor.custom.captures.entries").replace("%count%", String.valueOf(d.customCaptures.size())), "", m("gui.editor.custom.captures.left"), m("gui.editor.custom.captures.right"))).hideAllFlags().build());
+                inv.setItem(10, textItem(p, "gui.editor.custom.eventclass.label", d.customEventClass));
+                inv.setItem(12, textItem(p, "gui.editor.custom.playergetter.label", d.customPlayerGetter));
+                inv.setItem(14, new ItemBuilder(Material.BOOK).setName(m(p, "gui.editor.custom.captures.label")).setLore(mL(p, "gui.editor.custom.captures.lore").stream().map(s -> s.replace("%count%", String.valueOf(d.customCaptures.size()))).toList()).hideAllFlags().build());
             }
             case TARGETS -> {
-                inv.setItem(10, listItem("gui.editor.targets.targets.label", d.targets));
-                inv.setItem(12, numberItem("gui.editor.targets.amount.label", d.amount));
-                inv.setItem(14, numberItem("gui.editor.targets.repeat.label", d.repeat));
-                inv.setItem(16, numberItem("gui.editor.targets.points.label", d.points));
+                inv.setItem(10, listItem(p, "gui.editor.targets.targets.label", d.targets));
+                inv.setItem(12, numberItem(p, "gui.editor.targets.amount.label", d.amount));
+                inv.setItem(14, numberItem(p, "gui.editor.targets.repeat.label", d.repeat));
+                inv.setItem(16, numberItem(p, "gui.editor.targets.points.label", d.points));
             }
             case META -> {
-                inv.setItem(10, textItem("gui.editor.meta.id.label", d.id));
-                inv.setItem(12, textItem("gui.editor.meta.name.label", d.name));
+                inv.setItem(10, textItem(p, "gui.editor.meta.id.label", d.id));
+                inv.setItem(12, textItem(p, "gui.editor.meta.name.label", d.name));
             }
             case ACTIONS -> {
                 int[] slots = {10, 12, 14, 19, 21, 23, 28, 30};
                 ActionGroup[] grps = ActionGroup.values();
                 for (int i = 0; i < grps.length && i < slots.length; i++) {
-                    inv.setItem(slots[i], new ItemBuilder(Material.BOOK).setName(m("gui.editor.actions.group." + grps[i].key)).setLore(Arrays.asList(m("gui.editor.actions.lines").replace("%count%", String.valueOf(d.actions.getOrDefault(grps[i].key, List.of()).size())), "", m("gui.editor.actions.left"), m("gui.editor.actions.right"))).hideAllFlags().build());
+                    inv.setItem(slots[i], new ItemBuilder(Material.BOOK).setName(m(p, "gui.editor.actions.group." + grps[i].key)).setLore(Arrays.asList(m(p, "gui.editor.actions.lines").replace("%count%", String.valueOf(d.actions.getOrDefault(grps[i].key, List.of()).size())), "", m(p, "gui.editor.actions.left"), m(p, "gui.editor.actions.right"))).hideAllFlags().build());
                 }
-                inv.setItem(40, new ItemBuilder(Material.MAP).setName(m("gui.editor.actions.help.title")).setLore(Arrays.asList(m("gui.editor.actions.help.help1"), m("gui.editor.actions.help.help2"), m("gui.editor.actions.help.help3"), m("gui.editor.actions.help.help4"))).hideAllFlags().build());
+                inv.setItem(40, new ItemBuilder(Material.MAP).setName(m(p, "gui.editor.actions.help.title")).setLore(mL(p, "gui.editor.actions.help.lore")).hideAllFlags().build());
             }
             case CONDITIONS -> {
-                inv.setItem(10, listItem("gui.editor.conditions.start.label", d.condStart));
-                inv.setItem(12, listItem("gui.editor.conditions.success.label", d.condSuccess));
-                inv.setItem(14, listItem("gui.editor.conditions.fail.label", d.condFail));
-                inv.setItem(40, new ItemBuilder(Material.WRITABLE_BOOK).setName(m("gui.editor.conditions.help.title")).setLore(Arrays.asList(m("gui.editor.conditions.help.help1"), m("gui.editor.conditions.help.help2"), m("gui.editor.conditions.help.help3"))).hideAllFlags().build());
+                inv.setItem(10, listItem(p, "gui.editor.conditions.start.label", d.condStart));
+                inv.setItem(12, listItem(p, "gui.editor.conditions.success.label", d.condSuccess));
+                inv.setItem(14, listItem(p, "gui.editor.conditions.fail.label", d.condFail));
+                inv.setItem(40, new ItemBuilder(Material.WRITABLE_BOOK).setName(m(p, "gui.editor.conditions.help.title")).setLore(mL(p, "gui.editor.conditions.help.lore")).hideAllFlags().build());
             }
             case OPTIONS -> {
-                inv.setItem(10, textItem("gui.editor.options.resetpolicy.label", d.resetPolicy));
-                inv.setItem(12, textItem("gui.editor.options.resettime.label", d.resetTime));
-                inv.setItem(28, booleanItem("gui.editor.options.public.label", d.isPublic));
-                inv.setItem(30, booleanItem("gui.editor.options.party.label", d.party));
-                inv.setItem(40, new ItemBuilder(Material.MAP).setName(m("gui.editor.options.help.title")).setLore(Arrays.asList(m("gui.editor.options.help.help1"), m("gui.editor.options.help.help2"), m("gui.editor.options.help.help3"), m("gui.editor.options.help.help4"))).hideAllFlags().build());
+                inv.setItem(10, textItem(p, "gui.editor.options.resetpolicy.label", d.resetPolicy));
+                inv.setItem(12, textItem(p, "gui.editor.options.resettime.label", d.resetTime));
+                inv.setItem(28, booleanItem(p, "gui.editor.options.public.label", d.isPublic));
+                inv.setItem(30, booleanItem(p, "gui.editor.options.party.label", d.party));
+                inv.setItem(40, new ItemBuilder(Material.MAP).setName(m(p, "gui.editor.options.help.title")).setLore(mL(p, "gui.editor.options.help.lore")).hideAllFlags().build());
             }
-            // [NEW] Added logic for CHAIN tab
             case CHAIN -> {
-                inv.setItem(10, textItem("gui.editor.chain.next.label", d.nextQuestOnComplete));
-                inv.setItem(12, listItem("gui.editor.chain.required.label", d.requiredQuests));
+                inv.setItem(10, textItem(p, "gui.editor.chain.next.label", d.nextQuestOnComplete));
+                inv.setItem(12, listItem(p, "gui.editor.chain.required.label", d.requiredQuests));
             }
         }
     }
 
-    private void renderControls(Inventory inv) {
-        inv.setItem(45, new ItemBuilder(Material.EMERALD_BLOCK).setName(m("gui.editor.control.save.name")).setLore(Arrays.asList(m("gui.editor.control.save.lore1"), m("gui.editor.control.save.lore2"))).hideAllFlags().build());
-        inv.setItem(49, new ItemBuilder(Material.BARRIER).setName(m("gui.editor.control.close.name")).setLore(List.of(m("gui.editor.control.close.lore"))).hideAllFlags().build());
+    private void renderControls(Player p, Inventory inv) {
+        inv.setItem(45, new ItemBuilder(Material.EMERALD_BLOCK).setName(m(p, "gui.editor.control.save.name")).setLore(Arrays.asList(m(p, "gui.editor.control.save.lore1"), m(p, "gui.editor.control.save.lore2"))).hideAllFlags().build());
+        inv.setItem(49, new ItemBuilder(Material.BARRIER).setName(m(p, "gui.editor.control.close.name")).setLore(List.of(m(p, "gui.editor.control.close.lore"))).hideAllFlags().build());
     }
 
-    // --- Factories & Logic ---
-    private ItemStack textItem(String k, String v) { return new ItemBuilder(Material.PAPER).setName(m("gui.editor.common.text.name").replace("%label%", m(k))).setLore(Arrays.asList(m("gui.editor.common.text.value").replace("%value%", v == null || v.isEmpty() ? m("gui.editor.common.empty") : v), "", m("gui.editor.common.text.left"), m("gui.editor.common.text.right"))).hideAllFlags().build(); }
-    private ItemStack numberItem(String k, int v) { return new ItemBuilder(Material.REPEATER).setName(m("gui.editor.common.number.name").replace("%label%", m(k))).setLore(Arrays.asList(m("gui.editor.common.number.value").replace("%value%", String.valueOf(v)), "", m("gui.editor.common.number.edit"))).hideAllFlags().build(); }
-    private ItemStack booleanItem(String k, boolean v) { return new ItemBuilder(v ? Material.LIME_DYE : Material.GRAY_DYE).setName(m("gui.editor.common.boolean.name").replace("%label%", m(k))).setLore(Arrays.asList(m("gui.editor.common.boolean.value").replace("%value%", String.valueOf(v)), "", m("gui.editor.common.boolean.edit"))).hideAllFlags().build(); }
-    private ItemStack listItem(String k, List<String> l) { return new ItemBuilder(Material.BOOK).setName(m("gui.editor.common.list.name").replace("%label%", m(k))).setLore(Arrays.asList(m("gui.editor.common.list.entries").replace("%count%", String.valueOf(l == null ? 0 : l.size())), "", m("gui.editor.common.list.edit"))).hideAllFlags().build(); }
-    private ItemStack iconItem(QuestEditorDraft d) {
+    private ItemStack textItem(Player p, String k, String v) { return new ItemBuilder(Material.PAPER).setName(m(p, "gui.editor.common.text.name").replace("%label%", m(p, k))).setLore(Arrays.asList(m(p, "gui.editor.common.text.value").replace("%value%", v == null || v.isEmpty() ? m(p, "gui.editor.common.empty") : plugin.msg().color(v)), "", m(p, "gui.editor.common.text.left"), m(p, "gui.editor.common.text.right"))).hideAllFlags().build(); }
+    private ItemStack numberItem(Player p, String k, int v) { return new ItemBuilder(Material.REPEATER).setName(m(p, "gui.editor.common.number.name").replace("%label%", m(p, k))).setLore(Arrays.asList(m(p, "gui.editor.common.number.value").replace("%value%", String.valueOf(v)), "", m(p, "gui.editor.common.number.edit"))).hideAllFlags().build(); }
+    private ItemStack booleanItem(Player p, String k, boolean v) { return new ItemBuilder(v ? Material.LIME_DYE : Material.GRAY_DYE).setName(m(p, "gui.editor.common.boolean.name").replace("%label%", m(p, k))).setLore(Arrays.asList(m(p, "gui.editor.common.boolean.value").replace("%value%", String.valueOf(v)), "", m(p, "gui.editor.common.boolean.edit"))).hideAllFlags().build(); }
+    private ItemStack listItem(Player p, String k, List<String> l) { return new ItemBuilder(Material.BOOK).setName(m(p, "gui.editor.common.list.name").replace("%label%", m(p, k))).setLore(Arrays.asList(m(p, "gui.editor.common.list.entries").replace("%count%", String.valueOf(l == null ? 0 : l.size())), "", m(p, "gui.editor.common.list.edit"))).hideAllFlags().build(); }
+    private ItemStack iconItem(Player p, QuestEditorDraft d) {
         Material m = Material.getMaterial(d.displayIcon.toUpperCase(Locale.ROOT));
         if (m == null) m = Material.BOOK;
-        ItemBuilder b = new ItemBuilder(m).setName(m("gui.editor.display.icon.name")).setLore(Arrays.asList(m("gui.editor.display.icon.value").replace("%value%", m.name()), "", m("gui.editor.display.icon.left"), m("gui.editor.display.icon.right"), m("gui.editor.display.icon.inv"))).hideAllFlags();
+        ItemBuilder b = new ItemBuilder(m).setName(m(p, "gui.editor.display.icon.name")).setLore(mL(p, "gui.editor.display.icon.lore")).hideAllFlags();
         if (d.displayCustomModelData != -1) b.setModelData(d.displayCustomModelData);
         return b.build();
     }
 
     private void ensureActionGroups(QuestEditorDraft d) { for (ActionGroup g : ActionGroup.values()) d.actions.computeIfAbsent(g.key, k -> new ArrayList<>()); }
 
-    // [NEW] Added requiredQuests case
     private List<String> getListReference(QuestEditorDraft d, String key) {
         return switch (key) {
             case "display.description" -> d.displayDescription;
@@ -328,7 +315,7 @@ public final class QuestEditorMenu implements Listener {
             case "conditions.start" -> d.condStart;
             case "conditions.success" -> d.condSuccess;
             case "conditions.fail" -> d.condFail;
-            case "requiredQuests" -> d.requiredQuests; // [NEW]
+            case "requiredQuests" -> d.requiredQuests;
             default -> key.startsWith("actions.") ? d.actions.computeIfAbsent(key.substring(8), k -> new ArrayList<>()) : null;
         };
     }
@@ -337,7 +324,7 @@ public final class QuestEditorMenu implements Listener {
         if (R) { setter.accept(def); openMainDelayed(p, sessions.get(p.getUniqueId())); }
         else if (L) {
             p.closeInventory();
-            ChatInput.await(p, m("gui.editor.prompt.generic_text", "Enter value:"), (pl, s) -> { setter.accept(s); openMainDelayed(pl, sessions.get(pl.getUniqueId())); });
+            ChatInput.await(p, m(p, "gui.editor.prompt.generic_text"), (pl, s) -> { setter.accept(s); openMainDelayed(pl, sessions.get(pl.getUniqueId())); });
         }
     }
 
@@ -390,8 +377,14 @@ public final class QuestEditorMenu implements Listener {
                 else if (slot == 12 && L) openListDelayed(p, "display.description");
                 else if (slot == 14) promptOrClear(p, L, R, "BOOK", v -> { d.displayIcon = v.toUpperCase(Locale.ROOT); d.displayCustomModelData = -1; });
                 else if (slot == 16) promptOrClear(p, L, R, "&7%value%/%target%", v -> d.displayProgress = v);
-                else if (slot == 19 && L) { p.closeInventory(); ChatInput.await(p, m("gui.editor.prompt.display_cmd"), (pl, v) -> { try { d.displayCustomModelData = Integer.parseInt(v.trim()); } catch(Exception ignored){d.displayCustomModelData=-1;} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
-                else if (slot == 21) promptOrClear(p, L, R, "", v -> d.displayHint = v);
+                else if (slot == 19 && L) { p.closeInventory(); ChatInput.await(p, m(p, "gui.editor.prompt.display_cmd"), (pl, v) -> { try { d.displayCustomModelData = Integer.parseInt(v.trim()); } catch(Exception ignored){d.displayCustomModelData=-1;} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
+                else if (slot == 21) { // 힌트 명령어 (Hint Command)
+                    p.closeInventory();
+                    ChatInput.await(p, m(p, "gui.editor.prompt.display_hint"), (pl, v) -> {
+                        d.displayHint = v;
+                        openMainDelayed(pl, sessions.get(pl.getUniqueId()));
+                    });
+                }
                 else if (slot == 23) promptOrClear(p, L, R, "", v -> d.displayReward = v);
                 else if (slot == 25) promptOrClear(p, L, R, "", v -> d.displayCategory = v);
                 else if (slot == 28) promptOrClear(p, L, R, "", v -> d.displayDifficulty = v);
@@ -408,13 +401,13 @@ public final class QuestEditorMenu implements Listener {
             }
             case TARGETS -> {
                 if (slot == 10 && L) openListDelayed(p, "targets");
-                else if (slot == 12 && L) { p.closeInventory(); ChatInput.await(p, m("gui.editor.prompt.targets_amount"), (pl, v) -> { try { d.amount = Math.max(1, Integer.parseInt(v.trim())); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
-                else if (slot == 14 && L) { p.closeInventory(); ChatInput.await(p, m("gui.editor.prompt.targets_repeat"), (pl, v) -> { try { d.repeat = Integer.parseInt(v.trim()); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
-                else if (slot == 16 && L) { p.closeInventory(); ChatInput.await(p, m("gui.editor.prompt.targets_points"), (pl, v) -> { try { d.points = Math.max(0, Integer.parseInt(v.trim())); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
+                else if (slot == 12 && L) { p.closeInventory(); ChatInput.await(p, m(p, "gui.editor.prompt.targets_amount"), (pl, v) -> { try { d.amount = Math.max(1, Integer.parseInt(v.trim())); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
+                else if (slot == 14 && L) { p.closeInventory(); ChatInput.await(p, m(p, "gui.editor.prompt.targets_repeat"), (pl, v) -> { try { d.repeat = Integer.parseInt(v.trim()); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
+                else if (slot == 16 && L) { p.closeInventory(); ChatInput.await(p, m(p, "gui.editor.prompt.targets_points"), (pl, v) -> { try { d.points = Math.max(0, Integer.parseInt(v.trim())); } catch(Exception ignored){} openMainDelayed(pl, sessions.get(pl.getUniqueId())); }); }
             }
             case META -> {
-                if (slot == 10) promptOrClear(p, L, R, "", v -> d.id = v.toLowerCase(Locale.ROOT));
-                else if (slot == 12) promptOrClear(p, L, R, "", v -> d.name = v);
+                if (slot == 10) promptOrClear(p, L, R, d.id, v -> d.id = v.toLowerCase(Locale.ROOT));
+                else if (slot == 12) promptOrClear(p, L, R, d.name, v -> d.name = v);
             }
             case ACTIONS -> {
                 int[] slots = {10,12,14,19,21,23,28,30};
@@ -432,7 +425,6 @@ public final class QuestEditorMenu implements Listener {
                 else if (slot == 28 && L) { d.isPublic = !d.isPublic; openMainDelayed(p, s); }
                 else if (slot == 30 && L) { d.party = !d.party; openMainDelayed(p, s); }
             }
-            // [NEW] Added click logic for CHAIN tab
             case CHAIN -> {
                 if (slot == 10) promptOrClear(p, L, R, "", v -> d.nextQuestOnComplete = v);
                 else if (slot == 12 && L) openListDelayed(p, "requiredQuests");
@@ -455,11 +447,11 @@ public final class QuestEditorMenu implements Listener {
             else if (e.getClick().isLeftClick()) {
                 String old = list.get(idx);
                 p.closeInventory();
-                ChatInput.await(p, m("gui.editor.prompt.list_edit").replace("%old%", old), (pl, v) -> { list.set(idx, v); openListDelayed(pl, key); });
+                ChatInput.await(p, m(p, "gui.editor.prompt.list_edit").replace("%old%", old), (pl, v) -> { list.set(idx, v); openListDelayed(pl, key); });
             }
         } else if (idx == list.size()) {
             p.closeInventory();
-            ChatInput.await(p, m("gui.editor.prompt.list_add"), (pl, v) -> { list.add(v); openListDelayed(pl, key); });
+            ChatInput.await(p, m(p, "gui.editor.prompt.list_add"), (pl, v) -> { list.add(v); openListDelayed(pl, key); });
         }
     }
 
@@ -493,11 +485,11 @@ public final class QuestEditorMenu implements Listener {
             if (e.getClick().isRightClick()) { s.draft.customCaptures.remove(key); openCapturesDelayed(p); }
             else if (e.getClick().isLeftClick()) {
                 p.closeInventory();
-                ChatInput.await(p, m("gui.editor.prompt.captures_edit"), (pl, v) -> { if (applyCaptureLine(s.draft, v, true)) openCapturesDelayed(pl); });
+                ChatInput.await(p, m(p, "gui.editor.prompt.captures_edit"), (pl, v) -> { if (applyCaptureLine(s.draft, v, true)) openCapturesDelayed(pl); });
             }
         } else if (idx == entries.size()) {
             p.closeInventory();
-            ChatInput.await(p, m("gui.editor.prompt.captures_add"), (pl, v) -> { if (applyCaptureLine(s.draft, v, false)) openCapturesDelayed(pl); });
+            ChatInput.await(p, m(p, "gui.editor.prompt.captures_add"), (pl, v) -> { if (applyCaptureLine(s.draft, v, false)) openCapturesDelayed(pl); });
         }
     }
 
@@ -518,7 +510,7 @@ public final class QuestEditorMenu implements Listener {
     }
 
     private void saveDraft(Player p, QuestEditorDraft d) {
-        if (d.id == null || d.id.isBlank()) { p.sendMessage(m("gui.editor.error.id_empty")); return; }
+        if (d.id == null || d.id.isBlank()) { p.sendMessage(m(p, "gui.editor.error.id_empty")); return; }
         try {
             QuestDef def = d.buildQuestDef();
             org.bukkit.configuration.file.YamlConfiguration yml = QuestDef.toYaml(def);
@@ -526,8 +518,8 @@ public final class QuestEditorMenu implements Listener {
             if (!folder.exists()) folder.mkdirs();
             yml.save(new File(folder, def.id + ".yml"));
             plugin.quests().reload();
-            p.sendMessage(m("gui.editor.save.ok").replace("%id%", def.id));
-        } catch (Exception ex) { p.sendMessage(m("gui.editor.save.fail").replace("%msg%", ex.getMessage())); ex.printStackTrace(); }
+            p.sendMessage(m(p, "gui.editor.save.ok").replace("%id%", def.id));
+        } catch (Exception ex) { p.sendMessage(m(p, "gui.editor.save.fail").replace("%msg%", ex.getMessage())); ex.printStackTrace(); }
     }
 
     public void openListSelection(Player player, int page) {
